# flickr-exporter

./: .gitignore  Makefile  README.md  check_failures.py  pyproject.toml
flickr_exporter/: __init__.py  __main__.py  auth.py  cli.py  exporter.py  flickr_api.py  metadata.py  models.py
tests/: test_auth.py  test_cli.py  test_exporter.py
